2007-03-23	Dmitry Dulepov	<dmitry@typo3.org>

	* Fixed bug 5269: wsol_preview.php does not scroll to content element
	* Fixed bug 4953: Preview in Workspaces Module for Contentelements

2007-03-12  Michael Stucki  <michael@typo3.org>

	* Change copyright information in typo3/index.php (no real change, just replace the hardcoded years with the "TYPO3_copyright_year" constant)

2007-03-06  Michael Stucki  <michael@typo3.org>

	* Release of TYPO3 4.1
	* Remove typo3/sysext/topapps/ and typo3/alt_main_new.php (they are not used in version 4.1)

2007-03-06  Ingmar Schlecht  <ingmar@typo3.org>

	* Setting default value of pageNotFoundOnCHashError back to "false" (= reverting Stucki's patch) as some extensions had problems with the new default value

2007-03-05  Michael Stucki  <michael@typo3.org>

	* New login image (if no skin is used) by Ture Andersen
	* Added a warning for admins if typo3conf/ENABLE_INSTALL_TOOL exists (which means that the Install Tool is currently enabled)
	* Changed layout of admin warnings (use <li> instead of plain breaks)
	* Fixed bug #5125: Typo in SQL definition of sys_history

2007-03-04  Oliver Hader  <oh@inpublica.de>

	* Fixed bug: #5098: IRRE - foreign_unique without foreign_selector doesn't work

2007-03-01  Oliver Hader  <oh@inpublica.de>

	* Fixed bug: #5069: TSconfig mod.web_list.allowedNewTables used in t3lib_TCEforms_inline
	* Fixed bug: #5092: Typo in Who is online (thanks to Matthias Kall)

2007-03-01  Karsten Dambekalns <karsten@typo3.org>

	* typo3/sysext/indexed_search: DBAL compliancy patch

2007-02-28  Ingmar Schlecht  <ingmar@typo3.org>

	* New login image for t3skin by Ture Andersen

2007-02-27  Oliver Hader  <oh@inpublica.de>

	* Fixed bug: #5052: Form action URL is not htmlspecialchared (patch by Michael Stucki)
	* Fixed bug: #5072: Web>Info>Log - ID of BE user is displayed instead of its username
	* Fixed bug: #5073: Tools>User Admin>List users online is broken
